@@ -10,6 +10,8 @@
 
 	* registry/registry.sgml: Synced with Montréal.
 
+	* lib/localweb.py: Textual tweaks.
+
 2007-06-14  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/tp-robot: Use angled brackets to quote email addresses.
